unpackaged/main/default/objects/Project_Calendar__c/Project_Calendar__c.object-meta.xml
<CustomObject>
    <label>Project Calendar</label>
    <nameField>
        <label>Date</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>