unpackaged/main/default/objects/Project_Calendar__c/fields/Text_Weekday__c.field-meta.xml
<CustomField>
    <fullName>Text_Weekday__c</fullName>
    <label>Text_Weekday</label>
    <length>12</length>
    <type>Text</type>
</CustomField>