unpackaged/main/default/objects/Project_Calendar__c/fields/Weekday__c.field-meta.xml
<CustomField>
    <fullName>Weekday__c</fullName>
    <label>Weekday</label>
    <length>12</length>
    <type>Text</type>
</CustomField>