unpackaged/main/default/objects/Project_Calendar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_D__c</columns>
    <columns>Weekday__c</columns>
    <columns>Text_Weekday__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Number_of_Project_Tasks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>