unpackaged/main/default/objects/Project_Calendar__c/listViews/Project_tasks_this_Month.listView-meta.xml
<ListView>
    <fullName>Project_tasks_this_Month</fullName>
    <columns>NAME</columns>
    <columns>Date_D__c</columns>
    <columns>Weekday__c</columns>
    <columns>Text_Weekday__c</columns>
    <columns>Number_of_Project_Tasks__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_D__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Project Tasks This Month</label>
    <language>en_US</language>
</ListView>