unpackaged/main/default/objects/Project_Calendar__c/listViews/Project_Tasks_WeekDays_Only.listView-meta.xml
<ListView>
    <fullName>Project_Tasks_WeekDays_Only</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Date_D__c</columns>
    <columns>Weekday__c</columns>
    <columns>Text_Weekday__c</columns>
    <columns>Number_of_Project_Tasks__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Text_Weekday__c</field>
        <operation>notEqual</operation>
        <value>Sunday</value>
    </filters>
    <filters>
        <field>Text_Weekday__c</field>
        <operation>notEqual</operation>
        <value>Saturday</value>
    </filters>
    <label>Project Tasks WeekDays Only</label>
    <language>en_US</language>
</ListView>